force-app/main/default/objects/Inspection_Test_Plan__c/Inspection_Test_Plan__c.object-meta.xml
<CustomObject>
    <description>Inspection and Test Plans defining hold/witness points for quality control activities on EPC projects.</description>
    <label>Inspection Test Plan</label>
    <nameField>
        <displayFormat>ITP-{00000}</displayFormat>
        <label>ITP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Test Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>