force-app/main/default/objects/Inspection_Test_Plan__c/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>Piping</fullName>
            </value>
            <value>
                <fullName>Structural</fullName>
            </value>
            <value>
                <fullName>E&amp;M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>