force-app/main/default/objects/Inspection_Test_Plan__c/fields/Hold_Witness_Points__c.field-meta.xml
<CustomField>
    <fullName>Hold_Witness_Points__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold / Witness Points</label>
    <type>Checkbox</type>
</CustomField>