force-app/main/default/objects/Inspection_Test_Plan__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Inspection Test Plans</relationshipLabel>
    <relationshipName>Inspection_Test_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>